More stuff added. Still WIP

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,8 +1,11 @@
+$font-primary: 'Lato';
+$font-secondary: 'Fira Mono';
+
 $light: #EEF8FF;
 $light--alt: #D1F5FF;
 $dark: #121212;
 
-$primary: #78E3FD;
-$primary--alt: #34F6F2;
+$primary: #34F6F2;
+$primary--alt: #78E3FD;
 
 $secondary: #7D53DE;
