--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -7,8 +7,9 @@
   margin-top: 1rem;
 }
 
-.hero-huge {
-  font-size: 32vw;
+.hero-greeting {
+  font-size: 5rem;
+  font-family: $font-secondary;
 }
 
 .hero-downloads {
