--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,7 +1,14 @@
 body {
-  background-color: $light;
+  color: $light;
+  background-color: $darker;
 }
 
 .main {
   position: relative;
+}
+
+@mixin dropshadow() {
+  -webkit-box-shadow: 0px -5px 15px 5px rgba(0,0,0,0.25);
+  -moz-box-shadow: 0px -5px 15px 5px rgba(0,0,0,0.25);
+  box-shadow: 0px -5px 15px 5px rgba(0,0,0,0.25);
 }
