Added about and jobs. One or two more pushes and it should be ready to launch

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -9,7 +9,8 @@ $darkest: #272727;
 $primary: #6AFFC6;
 $gray: #777777;
 
-$spacing: 1rem;
+$spacing: 0.5rem;
+$margins-limit: 4;
 
 $text-small: 0.9rem;
 $text-base: 1.25rem;
