--- a/src/styles/components/_map.scss
+++ b/src/styles/components/_map.scss
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   background-position: right center;
   height: 100%;
+  transform: translate(170px, -60px);
   
   img {
 
