--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -7,6 +7,11 @@ body {
   position: relative;
 }
 
+.is-padded {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 @mixin dropshadow() {
   -webkit-box-shadow: 0px -5px 15px 5px rgba(0,0,0,0.25);
   -moz-box-shadow: 0px -5px 15px 5px rgba(0,0,0,0.25);
