--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -1,4 +1,4 @@
-.hero {
+.section__hero {
   position: relative;
   height: 100vh;
 }
@@ -33,8 +33,12 @@
 }
 
 .hero-continue {
-  margin-top: 70vh;
   text-align: center;
+  position: absolute;
+  left: 50%;
+  bottom: 10rem;
+  width: 100%;
+  transform: translateX(-50%);
 }  
 
 .hero-continue__text {
