--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,3 @@
-$ionicons-font-path: "~ionicons/dist/fonts";
-
-/* Ionicons */
-@import "~ionicons/dist/scss/ionicons";
-
 /* Bulma Initial Variables and Functions */
 @import "~bulma/sass/utilities/initial-variables";
 @import "~bulma/sass/utilities/functions";
@@ -16,6 +11,7 @@ $ionicons-font-path: "~ionicons/dist/fonts";
 /* Project Global Styles */
 @import "global";
 @import "utils";
+@import "section";
 
 /* Project Components */ 
 @import "components/header";
@@ -23,3 +19,4 @@ $ionicons-font-path: "~ionicons/dist/fonts";
 @import "components/intro";
 @import "components/map";
 @import "components/about";
+@import "components/jobs";
